# condor_tensorflow

./: .gitignore  gpu.Dockerfile  mkdocs.yml  setup.cfg
src/condor_tensorflow/: __init__.py  activations.py  labelencoder.py  loss.py  metrics.py  utils.py  version.py
src/condor_tensorflow/tests/: test_activations.py  test_labelencoder.py  test_loss.py  test_metrics.py
