[metadata]
name = condor_tensorflow
version = 1.1.0
author = Garrett Jenkinson
author_email = Jenkinson.William@mayo.edu
description = A tensorflow implementation of Conditionals for Ordinal Regression
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GarrettJenkinson/condor_tensorflow
project_urls =
    Bug Tracker = https://github.com/GarrettJenkinson/condor_tensorflow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[aliases]
test=pytest

[tool:pytest]
addopts = --doctest-modules --cache-clear
testpaths =
    src

[coverage:run]
branch = True
include = src/*
omit =
    *tests*
    *_test.py

[flake8]
extend-ignore = E123,E201,E202,E203,E251,W503,W504
max-line-length = 120

[pylint.basic]
good-names=ax,db,df,ds,fh,xs,ys,a,b,c,d,i,j,n,X,x,y

[mypy]
python_version = 3.9
# plugins = numpy.typing.mypy_plugin

disallow_any_generics = True
disallow_incomplete_defs = True
# Needed because of bug in MyPy
disallow_subclassing_any = False
disallow_untyped_calls = False
disallow_untyped_decorators = False
disallow_untyped_defs = True
follow_imports = silent
ignore_missing_imports = True
install_types = True
no_implicit_reexport = True
non_interactive = True
show_error_codes = True
show_error_context = True
strict_equality = True
strict_optional = True
strict = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = False

[mypy-numpy.*]
allow_untyped_defs = True
allow_untyped_calls = True
implicit_reexport = True
